VELORA_PREMIUM_FASHION/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velora
  namespace: velora
  labels:
    helm.sh/chart: velora-1.0.0
    app.kubernetes.io/name: velora
    app.kubernetes.io/instance: velora
    app.kubernetes.io/version: "3.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:517293881035:certificate/66839996-2818-47b3-89dc-52c9ec2e108d
spec:
  ingressClassName: alb
  rules:
    - host: velora.purandhardevops.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: velora
                port:
                  number: 80
